--- a/verlen.ini
+++ b/verlen.ini
@@ -1,5 +1,5 @@
 [UPD]
 v=10
-build=1
+build=6
 des=Исправлены баги. Добавленны Лекции ПМП.
-upd=1 [fix 3]:Исправлены баги.Исправлены ошибки.
+upd=Версия10 [fix 3]:Исправлены баги.Исправлены ошибки.
